# leetcode-hard-gym

./: .env.example  .gitignore  README.md  environment.py  example.py  leetcode_types.py  pyproject.toml  requirements.txt  setup.py  test.py  utils.py
leetcode_dataset/: AddCodeSnippets.ipynb  AddTestCases.ipynb  BuildHumanEval.ipynb  CleanDataset.ipynb  ScrapeSnippets.ipynb  Test.ipynb  TestSubmission.ipynb  build.py  build.sh  schema.json  utils.py
leetcode_dataset/data/: leetcode-hard-py.jsonl  leetcode_dataset - lc.csv  leetcode_hard_with_snippets.csv  leetcode_hard_with_snippets_clean.csv
leetcode_dataset/data/humaneval/: leetcode-hard-py-100-sample-45.jsonl  leetcode-hard-py-100-sample-comment.jsonl  leetcode-hard-py-100-sample.jsonl  leetcode-hard-py-40-uncontaminated-constraints.jsonl  leetcode-hard-py-40-uncontaminated_tests.jsonl  leetcode-hard-rs-100-sample-desc.jsonl  leetcode-hard-rs-100-sample.jsonl  leetcode-hard-rs-40-uncontaminated.jsonl  (+2 more)
leetcode_dataset/lib/: add_test_cases.py  clean_dataset.py  fetch_dataset.py  format_dataset.py
leetcode_dataset/lib/utils/: llm.py  (+2 more)
leetcode_dataset/notebooks/: AddTestCases.ipynb  BuildHumanEval.ipynb
leetcode_env/: environment.py  leetcode_types.py  types.py  utils.py
leetcode_env/utils/: formatting.py  leetcode.py
leetcode_hard_gym/: example.py  main.py
leetcode_hard_gym/leetcode_dataset/: BuildDataset.ipynb  BuildHumanEval.ipynb  CleanDataset.ipynb  utils.py
leetcode_hard_gym/leetcode_env/: environment.py  leetcode_types.py  utils.py
tests/utils/: test_python_formatter.py  test_rust_formatter.py
(+9 files in other folders)
